se agrego la impresion de temperatura

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,6 @@
         android:inputType="text"
         android:hint="@string/userid"
         android:autofillHints="" />
-
     <EditText
         android:id="@+id/txtTitle"
         android:layout_width="match_parent"
@@ -22,7 +21,6 @@
         android:inputType="text"
         android:hint="@string/title"
         android:autofillHints="" />
-
     <EditText
         android:id="@+id/txtBody"
         android:layout_width="match_parent"
@@ -31,17 +29,6 @@
         android:hint="@string/body"
         android:autofillHints="" />
 
-    <Button
-        android:id="@+id/btnEnviar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/enviar" />
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/location"
-        android:layout_centerInParent="true"
-        android:text="Location"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -71,4 +58,8 @@
         android:id="@+id/btnlocation"
         android:text="Get Location"/>
 
+    <ListView
+        android:id="@+id/idListView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
 </LinearLayout>
