--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="16dp">
+
 
     <TextView
         android:id="@+id/tvDate"
@@ -11,15 +13,32 @@
         android:layout_height="wrap_content"
         android:text="2017-11-29"
         android:textColor="@color/colorPrimaryDark"
-        android:textSize="20sp"
+        android:textSize="16sp"
         android:textStyle="bold" />
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/tvLink"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:paddingBottom="10dp"
+            android:text="http://......"
+            android:textColor="@color/colorPrimary"
+            android:textSize="18sp"
+            android:textStyle="normal" />
+
+    </LinearLayout>
 
     <TextView
         android:id="@+id/tvTemperature"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Temperature"
+        android:text="Temperatura"
         android:textColor="@color/colorPrimaryDark"
         android:textSize="18sp"
         android:textStyle="italic" />
@@ -33,9 +52,10 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="0.5"
-            android:text="High"
             android:textColor="@color/colorAccent"
-            android:textSize="18sp"
+            android:textSize="25sp"
+            android:paddingTop="10dp"
+            android:drawableLeft="@drawable/suniconbold"
             android:textStyle="normal" />
 
         <TextView
@@ -45,7 +65,7 @@
             android:layout_weight="1"
             android:text="33"
             android:textColor="@color/colorAccent"
-            android:textSize="18sp"
+            android:textSize="25sp"
             android:textStyle="normal" />
 
     </LinearLayout>
@@ -59,9 +79,10 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="0.5"
-            android:text="Low"
             android:textColor="@color/colorGreen"
             android:textSize="18sp"
+            android:paddingTop="10dp"
+            android:drawableLeft="@drawable/snow_icon"
             android:textStyle="normal" />
 
         <TextView
@@ -70,35 +91,10 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="23"
-            android:textColor="@color/colorGreen"
+            android:textColor="@color/colorBlue"
             android:textSize="18sp"
             android:textStyle="normal" />
 
     </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.5"
-            android:text="Link "
-            android:textColor="@color/colorPrimary"
-            android:textSize="18sp"
-            android:textStyle="normal" />
-
-        <TextView
-            android:id="@+id/tvLink"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="http://......"
-            android:textColor="@color/colorPrimary"
-            android:textSize="18sp"
-            android:textStyle="normal" />
-
-    </LinearLayout>
 </LinearLayout>
